# scalecast

./: .gitignore  .readthedocs.yaml  CODE_OF_CONDUCT.md  Contributing.md  Grids.py  MANIFEST  README.md  avocado_model_summaries.csv  housing.py  housing_different_levels.py  housing_different_levels_results.xlsx  pyproject.toml  setup.cfg  setup.py  test.py
.github/: dependabot.yml
.ipynb_checkpoints/: README-checkpoint.ipynb  avocados-checkpoint.ipynb
assets/pt1/: Thumbs.db
docs/: .readthedocs.yaml  0.17  Introduction.rst  about.rst  call_me_history.md  change_log.md  conf.py  estimators.md  export.md  features.md  index.rst  initialization.rst  installation.rst  levels.md  metrics.md  normalizer.md  plotting.md  requirements.txt  tune.md  warnings.md  weighted.md  xvars.md
docs-backup/source/: conf.py
docs/.ipynb_checkpoints/: requirements-checkpoint.txt
docs/Forecaster/: AnomalyDetector.rst  Auxmodels.rst  ChangepointDetector.rst  Forecaster.rst  ForecasterGlobals.ipynb  GridGenerator.rst  MVForecaster.rst  Models.rst  Multiseries.rst  Notebook.rst  Pipeline.rst  SeriesTransformer.rst  Util.rst  _forecast.rst
docs/GridGenerator/: GridGenerator.rst
docs/Multiseries/: Multiseries.rst
docs/Notebook/: Notebook.rst
docs/examples/: Introduction2.ipynb
docs/source/: Introduction.rst
examples/: AirPassengers.csv  Grids.py  LSTM.ipynb  README.md  avocado_model_summaries.csv  avocados.ipynb  eCommerce.ipynb  eCommerce_Xvars.csv  eCommerce_feature_info.xlsx  eCommerce_results.xlsx  eCommerce_validation_grids.xlsx  housing.py  housing_different_levels.py  housing_different_levels_feature_info.xlsx  housing_different_levels_results.xlsx  housing_feature_info.xlsx  housing_results.xlsx
examples/.ipynb_checkpoints/: Grids-checkpoint.py  LSTM-checkpoint.ipynb  avocado_model_summaries-checkpoint.csv  avocados-checkpoint.ipynb  eCommerce-checkpoint.ipynb  eCommerce_hourly-checkpoint.ipynb  housing-checkpoint.py  housing_different_levels-checkpoint.py
scalecast/: Forecaster.py  Grids.py  __init__.py  avocado_model_summaries.csv  avocados.ipynb  housing.py  housing_different_levels.py  housing_different_levels_results.xlsx  housing_results.xlsx  test.py
src/SCALECAST.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/SCALECASTDEV.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/scalecast/: AnomalyDetector.py  ChangepointDetector.py  Forecaster.py  GridGenerator.py  MVForecaster.py  Metrics.py  Pipeline.py  SeriesTransformer.py  _Forecaster_parent.py  _utils.py  (+14 more)
test/: ExampleGrids.py  MVGrids.py  VECMGrid.py  config.py  postbuild  readme.md  readme.txt  requirements.txt  test.pckl  test_AnomalyDetector.py  test_ChangepointDetector.py  test_Forecaster.py  test_GridGenerator.py  test_MVForecaster.py  test_Pipeline.py  test_SeriesTransformer.py  test_all.py  test_multiseries.py  test_util.py
(+86 files in other folders)
